--- a/app/src/main/res/drawable/location.xml
+++ b/app/src/main/res/drawable/location.xml
@@ -6,7 +6,7 @@
     android:viewportWidth="24">
 
     <path
-        android:fillColor="#FF6968"
+        android:fillColor="#ffffff"
         android:pathData="M12,2 C8.13,2,5,5.13,5,9 C5,14.25,12,22,12,22 S19,14.25,19,9
 C19,5.13,15.87,2,12,2 Z M12,11.5 C10.62,11.5,9.5,10.38,9.5,9 S10.62,6.5,12,6.5
 S14.5,7.62,14.5,9 S13.38,11.5,12,11.5 Z" />
