--- a/app/src/main/res/layout/activity_ciudades.xml
+++ b/app/src/main/res/layout/activity_ciudades.xml
@@ -1,51 +1,252 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="io.llamas.retobrounie.Ciudades">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/fondo"
-        android:elevation="2dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/regresar"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_centerVertical="true"
-            android:padding="12dp"
-            android:src="@drawable/regresar" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/fondo"
+            android:elevation="2dp">
 
-        <io.llamas.retobrounie.CustomClasses.RalewaySemiBold
-            android:id="@+id/nombre"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/regresar"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_centerVertical="true"
+                android:padding="12dp"
+                android:src="@drawable/regresar" />
+
+            <io.llamas.retobrounie.CustomClasses.RalewaySemiBold
+                android:id="@+id/nombre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="Pais"
+                android:textSize="18sp" />
+
+            <ImageView
+                android:id="@+id/agregar"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:padding="12dp"
+                android:src="@drawable/agregar" />
+
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:nestedScrollingEnabled="false"
+            android:overScrollMode="never" />
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/ventana"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <View
+            android:id="@+id/fondo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.75"
+            android:background="@color/solid" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="Pais"
-            android:textSize="18sp" />
-
-        <ImageView
-            android:id="@+id/agregar"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:padding="12dp"
-            android:src="@drawable/agregar" />
+            android:layout_margin="24dp"
+            android:background="@drawable/tarjeta"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="38dp">
+
+                <io.llamas.retobrounie.CustomClasses.RalewaySemiBold
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="Agrega una Ciudad"
+                    android:textColor="@color/solid" />
+
+                <ImageView
+                    android:id="@+id/cerrar"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="6dp"
+                    android:layout_marginRight="6dp"
+                    android:padding="2dp"
+                    android:src="@drawable/cerrar" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_alignParentBottom="true"
+                    android:alpha=".2"
+                    android:background="@color/solid_soft" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="24dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <RelativeLayout
+                        android:layout_width="96dp"
+                        android:layout_height="96dp">
+
+                        <RelativeLayout
+                            android:layout_width="96dp"
+                            android:layout_height="96dp"
+                            android:background="@drawable/tarjeta_gris">
+
+                            <ImageView
+                                android:layout_width="24dp"
+                                android:layout_height="24dp"
+                                android:layout_centerInParent="true"
+                                android:src="@drawable/agregar_foto_blanco" />
+
+                        </RelativeLayout>
+
+                        <com.makeramen.roundedimageview.RoundedImageView
+                            android:id="@+id/imagen"
+                            android:layout_width="96dp"
+                            android:layout_height="96dp"
+                            android:layout_gravity="center_vertical"
+                            android:scaleType="centerCrop"
+                            app:riv_corner_radius="8dip" />
+
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginStart="24dp"
+                        android:orientation="vertical">
+
+                        <io.llamas.retobrounie.CustomClasses.RalewayMediumEdit
+                            android:id="@+id/etCiudad"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="6dp"
+                            android:background="@android:color/transparent"
+                            android:hint="Ciudad"
+                            android:textColor="@color/solid"
+                            android:textColorHint="@color/solid_soft"
+                            android:textSize="24sp" />
+
+                        <io.llamas.retobrounie.CustomClasses.RalewayMediumEdit
+                            android:id="@+id/etURL"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
+                            android:hint="Foto URL"
+                            android:textColor="@color/solid"
+                            android:textColorHint="@color/solid_soft"
+                            android:textSize="16sp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
+                    android:layout_marginTop="24dp"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp">
+
+                        <ImageView
+                            android:layout_width="16dp"
+                            android:layout_height="16dp"
+                            android:src="@drawable/location_roja" />
+
+                        <io.llamas.retobrounie.CustomClasses.RalewaySemiBold
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="6dp"
+                            android:layout_marginStart="6dp"
+                            android:text="Ubicación"
+                            android:textColor="@color/solid"
+                            android:textSize="16sp" />
+
+                    </LinearLayout>
+
+                    <io.llamas.retobrounie.CustomClasses.RalewayMediumEdit
+                        android:id="@+id/etLatitud"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="6dp"
+                        android:background="@android:color/transparent"
+                        android:hint="Latitud"
+                        android:textColor="@color/solid"
+                        android:textColorHint="@color/solid_soft"
+                        android:textSize="16sp" />
+
+                    <io.llamas.retobrounie.CustomClasses.RalewayMediumEdit
+                        android:id="@+id/etLongitud"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:hint="Longitud"
+                        android:textColor="@color/solid"
+                        android:textColorHint="@color/solid_soft"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+
+                <io.llamas.retobrounie.CustomClasses.RalewayBold
+                    android:id="@+id/guardar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:background="@drawable/boton_solid"
+                    android:paddingBottom="9dp"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingTop="9dp"
+                    android:text="GUARDAR"
+                    android:textColor="@color/blanco"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:nestedScrollingEnabled="false"
-        android:overScrollMode="never" />
-
-</LinearLayout>
+</RelativeLayout>
